FPVTL-1481 Doc upload AWP